--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -45,7 +45,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/GeoartStudio/basecred-sdk",
+    "url": "git+https://github.com/GeoartStudio/basecred-sdk.git",
     "directory": "packages/sdk"
   },
   "homepage": "https://basecred-demo.geoart.studio"
