--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,6 +11,9 @@
       "import": "./dist/index.js"
     }
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
