openclaw-skill: rewrite SKILL.md with complete agent flow + rebrand to zkBaseCred
Replaces the minimal SKILL.md with a comprehensive agent instruction set covering
self-registration, owner verification, reputation checking, and plain-language
result delivery. Rebrands all prose references from BaseCred to zkBaseCred.

--- a/packages/openclaw-skill/package.json
+++ b/packages/openclaw-skill/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@basecred/openclaw-skill",
   "version": "0.1.0",
-  "description": "OpenClaw skill for checking human reputation via BaseCred",
+  "description": "OpenClaw skill for checking human reputation via zkBaseCred",
   "license": "MIT",
   "files": [
     "SKILL.md",
