rename npm package to zkbasecred-skill (unscoped)
Drop @basecred/ scope so the package can be published without an npm org subscription.

--- a/packages/zkbasecred-skill/package.json
+++ b/packages/zkbasecred-skill/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "@basecred/zkbasecred-skill",
+  "name": "zkbasecred-skill",
   "version": "0.1.0",
   "description": "OpenClaw skill for checking human reputation via zkBaseCred",
   "license": "MIT",
   "files": [
     "SKILL.md",
     "README.md"
-  ],
-  "publishConfig": {
-    "access": "public"
-  }
+  ]
 }
