rename npm package to zkbasecredagent-skill

--- a/packages/zkbasecred-skill/package.json
+++ b/packages/zkbasecred-skill/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zkbasecred-skill",
+  "name": "zkbasecredagent-skill",
   "version": "0.1.0",
   "description": "OpenClaw skill for checking human reputation via zkBaseCred",
   "license": "MIT",
