--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "node scripts/copy-circuits.mjs",
+    "prebuild": "node scripts/copy-circuits.mjs",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
