--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -12,7 +12,10 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "version:integration": "docusaurus docs:version",
+    "version:foundation": "docusaurus docs:version:foundation",
+    "version:decision-engine": "docusaurus docs:version:decision-engine"
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
